@@ -1,5 +1,6 @@
 extern pam_module_t mod_pam_ccreds;
 extern pam_module_t mod_pam_env;
+extern pam_module_t mod_pam_krb5;
 extern pam_module_t mod_pam_ldap;
 extern pam_module_t mod_pam_limits;
 extern pam_module_t mod_pam_localuser;
@@ -12,6 +13,7 @@ extern pam_module_t mod_pam_winbind;
 pam_module_t *common_module_list[] = {
   &mod_pam_ccreds,
   &mod_pam_env,
+  &mod_pam_krb5,
   &mod_pam_ldap,
   &mod_pam_limits,
   &mod_pam_localuser,
@@ -25,6 +27,8 @@ pam_module_t *common_module_list[] = {
 
 static pam_module_t *module_list_account[] = {
   &mod_pam_unix2,
+  &mod_pam_krb5,
+  &mod_pam_localuser,
   &mod_pam_ldap,
   &mod_pam_winbind,
   NULL
@@ -33,6 +37,7 @@ static pam_module_t *module_list_account[] = {
 static pam_module_t *module_list_auth[] = {
   &mod_pam_env,
   &mod_pam_unix2,
+  &mod_pam_krb5,
   &mod_pam_ldap,
   &mod_pam_winbind,
   NULL
@@ -42,6 +47,7 @@ static pam_module_t *module_list_password[] = {
   &mod_pam_winbind,
   &mod_pam_pwcheck,
   &mod_pam_unix2,
+  &mod_pam_krb5,
   &mod_pam_ldap,
   NULL
 };
@@ -50,6 +56,7 @@ static pam_module_t *module_list_session[] = {
   &mod_pam_mkhomedir,
   &mod_pam_limits,
   &mod_pam_unix2,
+  &mod_pam_krb5,
   &mod_pam_ldap,
   &mod_pam_winbind,
   &mod_pam_umask,
