@@ -91,15 +91,15 @@ write_config_session (const char *file, pam_module_t **module_list)
       fprintf (fp, "\n");
     }
 
-  if (conf->use_krb5)
-    {
-      fprintf (fp, "session\toptional\tpam_krb5.so\t");
-      if (conf->krb5_debug)
-	fprintf (fp, "debug ");
-      if (conf->krb5_minuid)
-	fprintf (fp, "minimum_uid=%u ", conf->krb5_minuid);
-      fprintf (fp, "\n");
-    }
+  //if (conf->use_krb5)
+  //  {
+  //    fprintf (fp, "session\toptional\tpam_krb5.so\t");
+  //    if (conf->krb5_debug)
+  //	fprintf (fp, "debug ");
+  //    if (conf->krb5_minuid)
+  //	fprintf (fp, "minimum_uid=%u ", conf->krb5_minuid);
+  //    fprintf (fp, "\n");
+ //   }
 
   // if (conf->use_ldap)
   //   {
