@@ -1,6 +1,15 @@
 2007-07-02  Thorsten Kukuk  <kukuk@suse.de>
 
-	* src/pam-config.c (main): Convert pam_limits entris.
+	* src/mod_pam_krb5.c: New.
+	* src/pam-config.c (main): Convert pam_krb5 entries.
+	* src/Makefile.am: Add mod_pam_krb5.
+	* src/supported-modules.h: Add mod_pam_krb5.
+
+	* src/mod_pam_localuser.c: Implement write function.
+
+	* src/load_obsolete_conf.c: Convert for new interface.
+
+	* src/pam-config.c (main): Convert pam_limits entries.
 	* src/mod-pam_limits.c: new.
 
 2007-06-29  Thorsten Kukuk  <kukuk@suse.de>
